[gd_scene load_steps=5 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://castle.tscn" type="PackedScene" id=2]
[ext_resource path="res://worker.tscn" type="PackedScene" id=3]
[ext_resource path="res://building.tscn" type="PackedScene" id=4]

[node name="World" type="Spatial"]
script = ExtResource( 1 )

[node name="Castle" parent="." instance=ExtResource( 2 )]

[node name="Workers" type="Spatial" parent="."]

[node name="Worker" parent="Workers" instance=ExtResource( 3 )]
pause_mode = 1
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.8379, 0, 6.21779 )

[node name="Buildings" type="Spatial" parent="."]

[node name="Building" parent="Buildings" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.00993, 0, -12.7746 )

[node name="Floor" type="CSGBox" parent="."]
use_collision = true
width = 100.0
height = 1.0
depth = 100.0

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.670255, 0.742131, 0, -0.742131, 0.670255, 0, 24.4252, 14.975 )

[node name="Light" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11, 14, 0 )
shadow_enabled = true
omni_range = 28.4638

[connection signal="picked_food" from="Workers/Worker" to="." method="_on_Worker_picked_food"]
[connection signal="food_is_ready" from="Buildings/Building" to="." method="_on_Building_food_is_ready"]
